# addresses

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
scripts/: prepare-image-context.sh
src/: api.rs  cart_client.rs  config.rs  lib.rs  main.rs  model.rs  store.rs  templates.rs  web.rs
src/api/: list_query.rs
src/cart_client/: cart_error.rs
src/model/: address.rs  address_category.rs  address_form.rs  create_address.rs  update_address.rs
src/store/: store_error.rs
src/templates/: address_form_values.rs  address_row.rs  form_template.rs  index_template.rs
src/web/: new_query.rs
templates/: form.html  index.html
