[workspace]
members = ["."]
resolver = "2"

[package]
name = "sigma-addresses"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://addresses.sigma-tactical.com"
description = "Billing and shipping addresses for Sigma Tactical Group identity users"
publish = false

[dependencies]
askama = "0.16.0"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sigma-theme = { git = "https://github.com/sigmatactical-org/sigma-theme.git", features = ["warp"] }
sigma-identity-nav = { git = "https://github.com/sigmatactical-org/identity.git", package = "sigma-identity-nav" }
sigma-pg = { git = "https://github.com/sigmatactical-org/sigma-pg.git" }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }
warp = { version = "0.4.3", features = ["server"] }

[dev-dependencies]
serde_json = "1.0.150"
warp = { version = "0.4.3", features = ["test"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
